--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -4,19 +4,11 @@
    "cell_type": "markdown",
    "id": "1cfcad56",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "495518f3",
-   "metadata": {
-    "vscode": {
-     "languageId": "ini"
-    }
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "데이터 문장 수 : 약 78만 문장(38만 스팸 + 일반 40만) <br>\n",
+    "일반 : https://aihub.or.kr/aihubdata/data/view.do?dataSetSn=543 <br>\n",
+    "스팸 : https://www.bigdata-policing.kr/product/view?product_id=PRDT_395"
+   ]
   },
   {
    "cell_type": "code",
@@ -36,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "45f95686",
    "metadata": {},
    "outputs": [
@@ -44,34 +36,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "층화 샘플링 후 크기: (200000, 2)\n"
+      "전체 데이터 크기: (792108, 3)\n",
+      "label\n",
+      "0    403416\n",
+      "1    388692\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "# 1) 전체 데이터 로드\n",
+    "df = pd.read_csv(\"sms_all.csv\")  # id, text, label 가정\n",
     "\n",
-    "# USE_FULL_DATA = False일 때만 샘플링 수행\n",
-    "USE_FULL_DATA = False\n",
-    "SAMPLE_N = 200_000\n",
+    "print(\"전체 데이터 크기:\", df.shape)\n",
+    "print(df[\"label\"].value_counts())\n",
     "\n",
-    "if not USE_FULL_DATA and len(df) > SAMPLE_N:\n",
-    "    # stratify 샘플링\n",
-    "    df_small, _ = train_test_split(\n",
-    "        df,\n",
-    "        train_size=SAMPLE_N,\n",
-    "        random_state=42,\n",
-    "        stratify=df[\"label\"],\n",
-    "    )\n",
-    "    df = df_small.reset_index(drop=True)\n",
-    "    print(\"층화 샘플링 후 크기:\", df.shape)\n",
-    "else:\n",
-    "    print(\"전체 데이터 사용\")\n"
+    "# text, label만 사용\n",
+    "df = df[[\"text\", \"label\"]]\n",
+    "\n",
+    "X = df[\"text\"].astype(str)\n",
+    "y = df[\"label\"].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "d0274581",
    "metadata": {},
    "outputs": [
@@ -79,11 +68,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train: 160000 Test: 40000\n"
+      "Train 개수: 633686  / Test 개수: 158422\n"
      ]
     }
    ],
    "source": [
+    "# 2) train / test 분리 (층화)\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X,\n",
     "    y,\n",
@@ -92,42 +82,12 @@
     "    stratify=y,\n",
     ")\n",
     "\n",
-    "print(\"Train:\", len(X_train), \"Test:\", len(X_test))\n"
+    "print(\"Train 개수:\", len(X_train), \" / Test 개수:\", len(X_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "8276b663",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TF-IDF shape (train): (160000, 100000)\n",
-      "TF-IDF shape (test): (40000, 100000)\n"
-     ]
-    }
-   ],
-   "source": [
-    "vectorizer = TfidfVectorizer(\n",
-    "    analyzer=\"char_wb\",   # 단어 경계 기준 문자 n-gram\n",
-    "    ngram_range=(3, 5),   # 3~5 글자\n",
-    "    min_df=3,             # 너무 희귀한 n-gram 제거\n",
-    "    max_features=100_000  # 처음엔 10만, 나중에 여유되면 150k, 200k로 올려보기\n",
-    ")\n",
-    "\n",
-    "X_train_tfidf = vectorizer.fit_transform(X_train)\n",
-    "X_test_tfidf  = vectorizer.transform(X_test)\n",
-    "\n",
-    "print(\"TF-IDF shape (train):\", X_train_tfidf.shape)\n",
-    "print(\"TF-IDF shape (test):\", X_test_tfidf.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "59b187a0",
    "metadata": {},
    "outputs": [
@@ -135,30 +95,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Naive Bayes 결과 ===\n",
-      "Accuracy: 0.998375\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0     0.9988    0.9980    0.9984     20372\n",
-      "           1     0.9980    0.9987    0.9983     19628\n",
-      "\n",
-      "    accuracy                         0.9984     40000\n",
-      "   macro avg     0.9984    0.9984    0.9984     40000\n",
-      "weighted avg     0.9984    0.9984    0.9984     40000\n",
-      "\n",
-      "Confusion matrix (NB):\n",
-      "[[20332    40]\n",
-      " [   25 19603]]\n"
+      "TF-IDF shape (train): (633686, 100000)\n",
+      "TF-IDF shape (test): (158422, 100000)\n"
      ]
     }
    ],
    "source": [
+    "# 3) TF-IDF 벡터\n",
+    "vectorizer = TfidfVectorizer(\n",
+    "    analyzer=\"char_wb\",\n",
+    "    ngram_range=(3, 5),\n",
+    "    min_df=3,\n",
+    "    max_features=100_000,  # 필요하면 나중에 150k, 200k 시험\n",
+    ")\n",
+    "\n",
+    "X_train_tfidf = vectorizer.fit_transform(X_train)\n",
+    "X_test_tfidf  = vectorizer.transform(X_test)\n",
+    "\n",
+    "print(\"TF-IDF shape (train):\", X_train_tfidf.shape)\n",
+    "print(\"TF-IDF shape (test):\", X_test_tfidf.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "47c182c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Naive Bayes (전체 데이터) 결과 ===\n",
+      "Accuracy: 0.9988764186792238\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9995    0.9983    0.9989     80683\n",
+      "           1     0.9982    0.9995    0.9989     77739\n",
+      "\n",
+      "    accuracy                         0.9989    158422\n",
+      "   macro avg     0.9989    0.9989    0.9989    158422\n",
+      "weighted avg     0.9989    0.9989    0.9989    158422\n",
+      "\n",
+      "Confusion matrix (NB):\n",
+      "[[80545   138]\n",
+      " [   40 77699]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4) 나이브 베이즈 분류기\n",
     "nb = MultinomialNB()\n",
     "nb.fit(X_train_tfidf, y_train)\n",
     "\n",
     "y_pred_nb = nb.predict(X_test_tfidf)\n",
     "\n",
-    "print(\"=== Naive Bayes 결과 ===\")\n",
+    "print(\"=== Naive Bayes (전체 데이터) 결과 ===\")\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred_nb))\n",
     "print(classification_report(y_test, y_pred_nb, digits=4))\n",
     "\n",
@@ -169,50 +161,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "47c182c8",
+   "execution_count": 16,
+   "id": "766cac5f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM 학습용으로 100000개 샘플만 사용\n",
+      "SVM 학습용으로 train 전체 사용: 633686개\n",
       "=== Linear SVM 결과 ===\n",
-      "Accuracy: 0.999575\n",
+      "Accuracy: 0.9999431897085\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0     0.9992    1.0000    0.9996     20372\n",
-      "           1     1.0000    0.9991    0.9996     19628\n",
+      "           0     0.9999    1.0000    0.9999     80683\n",
+      "           1     1.0000    0.9999    0.9999     77739\n",
       "\n",
-      "    accuracy                         0.9996     40000\n",
-      "   macro avg     0.9996    0.9996    0.9996     40000\n",
-      "weighted avg     0.9996    0.9996    0.9996     40000\n",
+      "    accuracy                         0.9999    158422\n",
+      "   macro avg     0.9999    0.9999    0.9999    158422\n",
+      "weighted avg     0.9999    0.9999    0.9999    158422\n",
       "\n",
       "Confusion matrix (SVM):\n",
-      "[[20372     0]\n",
-      " [   17 19611]]\n"
+      "[[80682     1]\n",
+      " [    8 77731]]\n"
      ]
     }
    ],
    "source": [
-    "# SVM은 느리니까 train 중 일부만 사용해서 먼저 감만 잡자\n",
-    "SVM_TRAIN_MAX = 100_000  # 이 숫자 늘리면 바로 시간 늘어남\n",
+    "# -------------------------\n",
+    "# SVM 학습 데이터 수 설정\n",
+    "# -------------------------\n",
+    "SVM_TRAIN_MAX = None   # ← 전체 train(60만+) 다 쓰고 싶으면 None\n",
+    "# SVM_TRAIN_MAX = 300_000  # ← 너무 버거우면 이렇게 숫자로 제한\n",
     "\n",
     "X_train_svm = X_train_tfidf\n",
     "y_train_svm = y_train.to_numpy()\n",
     "\n",
-    "if X_train_svm.shape[0] > SVM_TRAIN_MAX:\n",
+    "if SVM_TRAIN_MAX is not None and X_train_svm.shape[0] > SVM_TRAIN_MAX:\n",
     "    idx = np.random.choice(X_train_svm.shape[0], size=SVM_TRAIN_MAX, replace=False)\n",
     "    X_train_svm = X_train_svm[idx]\n",
     "    y_train_svm = y_train_svm[idx]\n",
-    "    print(f\"SVM 학습용으로 {SVM_TRAIN_MAX}개 샘플만 사용\")\n",
+    "    print(f\"SVM 학습용으로 {SVM_TRAIN_MAX}개만 사용\")\n",
     "else:\n",
-    "    print(\"SVM 학습에 train 전체 사용\")\n",
+    "    print(f\"SVM 학습용으로 train 전체 사용: {X_train_svm.shape[0]}개\")\n",
     "\n",
     "svm = LinearSVC(\n",
     "    C=1.0,\n",
-    "    max_iter=2000,   # 수렴 안 되면 더 늘릴 수 있음\n",
+    "    max_iter=2000,\n",
     ")\n",
     "\n",
     "svm.fit(X_train_svm, y_train_svm)\n",
@@ -230,11 +225,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "766cac5f",
+   "execution_count": 17,
+   "id": "ca847d11",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오분류 개수: 9\n",
+      "=== 오분류 샘플 ===\n",
+      "실제 라벨: 1  / 예측: 0\n",
+      "문장: 한진택배입니다 예슬님 프리미엄 골드 런치 연어&참치 **g 모아보기. 동구 경안로 *** [각산동, 대구혁신 LH*단지] ***동 ***호로 문앞배송하였습니다.\n",
+      "\n",
+      "=== 오분류 샘플 ===\n",
+      "실제 라벨: 1  / 예측: 0\n",
+      "문장: 부자가 되는 비밀을 알아내고 운명을 바꿔보세요! 하루에 천만원씩 버는 비법 공개? 배우고싶으시다면 연락주세요 라인:tj**s\n",
+      "\n",
+      "=== 오분류 샘플 ===\n",
+      "실제 라벨: 1  / 예측: 0\n",
+      "문장: 古い写真を見て、私はまたあなたのことを思い出しました。私は韓国に行くつもりです。会ってもいいですか。+ĻịṆẸ： zilin**\n",
+      "\n",
+      "=== 오분류 샘플 ===\n",
+      "실제 라벨: 1  / 예측: 0\n",
+      "문장: Unknown님저번에 말씀드린지씨지놈 상장 확정입니다매주+? 무료 스펙주드려요*h*.io/ldl\n",
+      "\n",
+      "=== 오분류 샘플 ===\n",
+      "실제 라벨: 1  / 예측: 0\n",
+      "문장: 성욕 강한 오빠를 만나고 싶어용~  L̆̈ï͎N͎̽E kgg** 으로 연락줘요 잘 맞으면 장기적으로 연락하고 싶어요~\n",
+      "\n",
+      "=== 오분류 샘플 ===\n",
+      "실제 라벨: 1  / 예측: 0\n",
+      "문장: 무▼로▼료▼또▼한달안에 최소* 등 보 장돈내지마세요제가 그  꿈을 이루어드릴게요!!!http://dll.kr/kAu\n",
+      "\n",
+      "=== 오분류 샘플 ===\n",
+      "실제 라벨: 1  / 예측: 0\n",
+      "문장: ****년에도 늘 건강하시고 행운과 행복이 가득하시길 바랍니다! Evolution, Pragmatic Play 등 라이브\n",
+      "\n",
+      "=== 오분류 샘플 ===\n",
+      "실제 라벨: 1  / 예측: 0\n",
+      "문장: 오랫동안 인연을 맺을 수 있는 성실한 파트너를 찾고 있습니다 만, 싱글이시라면 저를 추가해 주세요 Ḻ INé E： gnsst\n",
+      "\n",
+      "=== 오분류 샘플 ===\n",
+      "실제 라벨: 0  / 예측: 1\n",
+      "문장: ***** **** ** 진짜 예뻤죠\n",
+      "\n",
+      "스팸→정상(false negative) : 8\n",
+      "정상→스팸(false positive) : 1\n",
+      "=== 스팸인데 정상으로 오분류된 것들 ===\n",
+      "- 한진택배입니다 예슬님 프리미엄 골드 런치 연어&참치 **g 모아보기. 동구 경안로 *** [각산동, 대구혁신 LH*단지] ***동 ***호로 문앞배송하였습니다.\n",
+      "- 부자가 되는 비밀을 알아내고 운명을 바꿔보세요! 하루에 천만원씩 버는 비법 공개? 배우고싶으시다면 연락주세요 라인:tj**s\n",
+      "- 古い写真を見て、私はまたあなたのことを思い出しました。私は韓国に行くつもりです。会ってもいいですか。+ĻịṆẸ： zilin**\n",
+      "- Unknown님저번에 말씀드린지씨지놈 상장 확정입니다매주+? 무료 스펙주드려요*h*.io/ldl\n",
+      "- 성욕 강한 오빠를 만나고 싶어용~  L̆̈ï͎N͎̽E kgg** 으로 연락줘요 잘 맞으면 장기적으로 연락하고 싶어요~\n",
+      "- 무▼로▼료▼또▼한달안에 최소* 등 보 장돈내지마세요제가 그  꿈을 이루어드릴게요!!!http://dll.kr/kAu\n",
+      "- ****년에도 늘 건강하시고 행운과 행복이 가득하시길 바랍니다! Evolution, Pragmatic Play 등 라이브\n",
+      "- 오랫동안 인연을 맺을 수 있는 성실한 파트너를 찾고 있습니다 만, 싱글이시라면 저를 추가해 주세요 Ḻ INé E： gnsst\n",
+      "=== 정상인데 스팸으로 오분류된 것들 ===\n",
+      "- ***** **** ** 진짜 예뻤죠\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "y_test_arr = np.array(y_test)\n",
+    "y_pred_arr = np.array(y_pred_svm)\n",
+    "X_test_arr = np.array(X_test)\n",
+    "\n",
+    "mis_idx = np.where(y_test_arr != y_pred_arr)[0]\n",
+    "print(\"오분류 개수:\", len(mis_idx))\n",
+    "\n",
+    "for i in mis_idx[:20]:\n",
+    "    print(\"=== 오분류 샘플 ===\")\n",
+    "    print(\"실제 라벨:\", y_test_arr[i], \" / 예측:\", y_pred_arr[i])\n",
+    "    print(\"문장:\", X_test_arr[i])\n",
+    "    print()\n",
+    "\n",
+    "false_neg = []  # 스팸인데 정상으로 예측됨\n",
+    "false_pos = []  # 정상인데 스팸으로 예측됨\n",
+    "\n",
+    "for i in mis_idx:\n",
+    "    if y_test_arr[i] == 1 and y_pred_arr[i] == 0:\n",
+    "        false_neg.append(X_test_arr[i])\n",
+    "    elif y_test_arr[i] == 0 and y_pred_arr[i] == 1:\n",
+    "        false_pos.append(X_test_arr[i])\n",
+    "\n",
+    "print(\"스팸→정상(false negative) :\", len(false_neg))\n",
+    "print(\"정상→스팸(false positive) :\", len(false_pos))\n",
+    "\n",
+    "print(\"=== 스팸인데 정상으로 오분류된 것들 ===\")\n",
+    "for t in false_neg[:20]:\n",
+    "    print(\"-\", t)\n",
+    "    \n",
+    "print(\"=== 정상인데 스팸으로 오분류된 것들 ===\")\n",
+    "for t in false_pos[:20]:\n",
+    "    print(\"-\", t)\n"
+   ]
   }
  ],
  "metadata": {
